[gd_scene load_steps=5 format=3 uid="uid://dy1srpchgj1bu"]

[ext_resource type="Script" path="res://ui/shop_item.gd" id="1_7a81p"]
[ext_resource type="Theme" uid="uid://b8okrfhmg8hhq" path="res://ui/ui_theme.tres" id="2_fltk2"]
[ext_resource type="Texture2D" uid="uid://cmwdryq64g806" path="res://assets/22_Leperchaun_Coin.png" id="3_840t3"]
[ext_resource type="AudioStream" uid="uid://b8ln2qwutmlnt" path="res://assets/audio/ui_purchase_01.wav" id="4_nml62"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 96.0
offset_bottom = 96.0
script = ExtResource("1_7a81p")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_fltk2")
stretch_mode = 0

[node name="UpgradeName" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme = ExtResource("2_fltk2")
theme_override_font_sizes/font_size = 12
text = "Upgrade Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
mouse_filter = 2

[node name="Coin Texture" type="TextureRect" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_840t3")
expand_mode = 2

[node name="UpgradeCost" type="Label" parent="PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_fltk2")
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CanPurchaseCover" type="Panel" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2

[node name="Max" type="Label" parent="PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme = ExtResource("2_fltk2")
text = "Max"
horizontal_alignment = 1

[node name="PurchaseSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_nml62")
volume_db = -15.0

[connection signal="mouse_entered" from="PanelContainer/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="PanelContainer/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="PanelContainer/TextureButton" to="." method="_on_texture_button_pressed"]
